platform: add preliminary support for MUSDK
this patch introduce a new platform - "linux-musdk".
most of the implementation relies on the standard "linux-generic" except for the following: shmem, pktio, crypto.

Change-Id: Ieb900b941ed6a46db0deb38ec8ffe41be7be103b
Signed-off-by: Shlomi Gridish <sgridish@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/35344
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Yuval Caduri <cyuval@marvell.com>

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,11 @@ then
     m4_include([./platform/linux-generic/m4/configure.m4])
     m4_include([./test/linux-generic/m4/configure.m4])
     IMPLEMENTATION_NAME="odp-linux"
+elif test "${with_platform}" == "linux-musdk";
+then
+    m4_include([./platform/linux-musdk/m4/configure.m4])
+    m4_include([./test/linux-musdk/m4/configure.m4])
+    IMPLEMENTATION_NAME="odp-musdk"
 else
     echo "UNSUPPORTED PLATFORM: ${with_platform}"
     exit 1
