musdk: temporary adding musdk flags hardcoded
Change-Id: I5d1342eafd5fd98120cbbd6ce5b9569882b393cd
Signed-off-by: Shlomi Gridish <sgridish@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/36156
Reviewed-by: Alan Winkowski <walan@marvell.com>
Reviewed-by: Yuval Caduri <cyuval@marvell.com>
Tested-by: Yuval Caduri <cyuval@marvell.com>

--- a/platform/linux-musdk/Makefile.am
+++ b/platform/linux-musdk/Makefile.am
@@ -10,6 +10,10 @@ AM_CFLAGS +=  -I$(srcdir)/include
 AM_CFLAGS +=  -I$(top_srcdir)/include
 AM_CFLAGS +=  -I$(top_builddir)/include
 AM_CFLAGS +=  -I$(linux_generic_srcdir)/include
+# The following lines are temporary W/A until MUSDK will expose its flags
+AM_CFLAGS +=	-DMVCONF_ARCH_DMA_ADDR_T_64BIT \
+		-DCONF_PP2_BPOOL_COOKIE_SIZE=32 \
+		-DCONF_PP2_BPOOL_DMA_ADDR_USE_32B
 
 include_HEADERS = \
 		  $(top_srcdir)/include/odp.h \
