--- a/platform/linux-musdk/Makefile.inc
+++ b/platform/linux-musdk/Makefile.inc
@@ -1,5 +1,6 @@
 AM_CFLAGS   += -I$(top_srcdir)/platform/$(with_platform)/arch/$(ARCH_DIR) \
 	-I$(top_srcdir)/platform/linux-generic/include \
+	-I$(top_srcdir)/helper/include \
 	-I$(top_srcdir)/platform/linux-generic/arch/$(ARCH_DIR)
 
 AM_CXXFLAGS += -I$(top_srcdir)/platform/$(with_platform)/arch/$(ARCH_DIR) \
