tests: add scripts for running musdk validation tests
The original ODP validation tests, which are located under test/common_plat/validation/api, can be run independently.
The scripts below are only for convenience to be able to run a batch of the ODP tests and also be able to add our own tests.
All the files were copied from linux-generic, but some of them were modified.
* pktio_run.sh currently runs only original PKTIO test. Once we will add new tests this is the place to add them.
* run-test runs several ODP components such as PKTIO/Classification/crypto etc. This list located at test/linux-musdk/Makefile.am.

Change-Id: I7dfc1a7559cd77a9b6f39972d5556f7707b9dd34
Signed-off-by: Liron Himi <lironh@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/40560
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Yuval Caduri <cyuval@marvell.com>

--- a/test/linux-musdk/Makefile.am
+++ b/test/linux-musdk/Makefile.am
@@ -4,3 +4,33 @@ TESTS_ENVIRONMENT += TEST_DIR=${top_builddir}/test/common_plat/validation
 ALL_API_VALIDATION_DIR = ${top_builddir}/test/common_plat/validation/api
 
 SUBDIRS =
+
+if test_vald
+TESTS = validation/api/pktio/pktio_run.sh \
+	$(ALL_API_VALIDATION_DIR)/buffer/buffer_main$(EXEEXT) \
+	$(ALL_API_VALIDATION_DIR)/classification/classification_main$(EXEEXT) \
+	$(ALL_API_VALIDATION_DIR)/crypto/crypto_main$(EXEEXT) \
+	$(ALL_API_VALIDATION_DIR)/packet/packet_main$(EXEEXT) \
+	$(ALL_API_VALIDATION_DIR)/pool/pool_main$(EXEEXT) \
+	$(ALL_API_VALIDATION_DIR)/queue/queue_main$(EXEEXT)
+
+SUBDIRS += validation/api/pktio
+
+endif
+
+TEST_EXTENSIONS = .sh
+
+dist_check_SCRIPTS = run-test tests-validation.env $(LOG_COMPILER)
+
+test_SCRIPTS = $(dist_check_SCRIPTS)
+
+tests-validation.env:
+	echo "TESTS=\"$(TESTS)\""    > $@
+	echo "$(TESTS_ENVIRONMENT)" >> $@
+	echo "$(LOG_COMPILER)"      >> $@
+
+if test_installdir
+installcheck-local:
+	$(DESTDIR)/$(testdir)/run-test
+endif
+
