--- a/platform/linux-musdk/Makefile.am
+++ b/platform/linux-musdk/Makefile.am
@@ -11,9 +11,8 @@ AM_CFLAGS +=  -I$(top_srcdir)/include
 AM_CFLAGS +=  -I$(top_builddir)/include
 AM_CFLAGS +=  -I$(linux_generic_srcdir)/include
 # The following lines are temporary W/A until MUSDK will expose its flags
-AM_CFLAGS +=	-DMVCONF_ARCH_DMA_ADDR_T_64BIT \
-		-DCONF_PP2_BPOOL_COOKIE_SIZE=32 \
-		-DCONF_PP2_BPOOL_DMA_ADDR_USE_32B
+AM_CFLAGS +=	-DMVCONF_TYPES_PUBLIC \
+		-DMVCONF_DMA_PHYS_ADDR_T_PUBLIC
 
 include_HEADERS = \
 		  $(top_srcdir)/include/odp.h \
