mvnmp/mvgiu: preliminary support for mvgiu and mvnmp
Change-Id: Ic59e343dd86e5ccd0051e13f45aecf7a7d26096d
Signed-off-by: Liron Himi <lironh@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/43481
Tested-by: iSoC Platform CI <ykjenk@marvell.com>
Reviewed-by: Yuval Caduri <cyuval@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/44709
Tested-by: Yuval Caduri <cyuval@marvell.com>

--- a/platform/linux-musdk/Makefile.am
+++ b/platform/linux-musdk/Makefile.am
@@ -237,6 +237,10 @@ if ODP_PKTIO_MVPP2
 __LIB__libodp_linux_la_SOURCES += pktio/mvpp2.c
 endif
 
+if ODP_PKTIO_MVGIU
+__LIB__libodp_linux_la_SOURCES += pktio/mvgiu.c
+endif
+
 if HAVE_PCAP
 __LIB__libodp_linux_la_SOURCES += ../linux-generic/pktio/pcap.c
 endif
