--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -3,8 +3,12 @@ SUBDIRS = classifier \
 	  hello \
 	  ipsec \
 	  l2fwd_simple \
+	  bridge \
 	  l3fwd \
+	  l3fwd_mv \
+	  nat \
 	  packet \
+	  slow_path \
 	  switch \
 	  time \
 	  timer \
