mvpp2: initial classification support
Change-Id: Ie7ce535b731f0a157aca8397810542dfae5f49ee
Signed-off-by: Liron Himi <lironh@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/44979
Tested-by: iSoC Platform CI <ykjenk@marvell.com>

--- a/platform/linux-musdk/Makefile.am
+++ b/platform/linux-musdk/Makefile.am
@@ -173,7 +173,7 @@ __LIB__libodp_linux_la_SOURCES = \
 			   ../linux-generic/odp_bitmap.c \
 			   ../linux-generic/odp_buffer.c \
 			   ../linux-generic/odp_byteorder.c \
-			   ../linux-generic/odp_classification.c \
+			   odp_classification.c \
 			   ../linux-generic/odp_cpu.c \
 			   ../linux-generic/odp_cpumask.c \
 			   ../linux-generic/odp_cpumask_task.c \
@@ -235,6 +235,7 @@ endif
 
 if ODP_PKTIO_MVPP2
 __LIB__libodp_linux_la_SOURCES += pktio/mvpp2.c
+__LIB__libodp_linux_la_SOURCES += pktio/mvpp2_cls.c
 endif
 
 if ODP_PKTIO_MVGIU
