mvnmp: added support for full guest mode
Change-Id: I2859e2301d77f61f060e5485e944c7f2a714efa8
Signed-off-by: Liron Himi <lironh@marvell.com>
Reviewed-on: http://vgitil04.il.marvell.com:8080/49582
Reviewed-by: Alan Winkowski <walan@marvell.com>

--- a/platform/linux-musdk/Makefile.am
+++ b/platform/linux-musdk/Makefile.am
@@ -242,6 +242,10 @@ if ODP_PKTIO_MVGIU
 __LIB__libodp_linux_la_SOURCES += pktio/mvgiu.c
 endif
 
+if ODP_MVNMP_GUEST_MODE
+__LIB__libodp_linux_la_SOURCES += pktio/nmp_guest_utils.c
+endif
+
 if HAVE_PCAP
 __LIB__libodp_linux_la_SOURCES += ../linux-generic/pktio/pcap.c
 endif
